--- a/Covid-19.html
+++ b/Covid-19.html
@@ -35,7 +35,8 @@
                 <p>
 					V zadnjih dneh potekajo na šoli aktivnosti, povezane s trenutno situacijo zaradi širjenja virusa.<br>
           O vsem, tudi o organizaciji dela v času, ko bodo vrata šole zaprta, boste obveščeni prav tukaj.<br>
-          Hvala za razumevanje
+          Za vse informacije in ostala vprašanja smo Vam vedno na voljo tudi učitelji preko elektronske pošte, e-asistenta,...<br>
+	  Hvala za razumevanje
                 </p>
                
 							</article>
