--- a/Covid-19.html
+++ b/Covid-19.html
@@ -34,7 +34,7 @@
 								</header>
                 <p>
 	  Na šoli redno spremljamo novice Ministrstva za zdravje in Ministrstva za šolstvo, izobraževanje in šport glede širjenja COVID 19.<br>
-	  V povezavi na https://www.nijz.si/ lahko najdete nekaj informacij glede koronavirusa.<br>
+	  <strong>V povezavi na https://www.nijz.si/ lahko najdete nekaj informacij glede koronavirusa.</strong><br>
 	  V zadnjih dneh potekajo na šoli aktivnosti, povezane s trenutno situacijo zaradi širjenja virusa.<br>
           O vsem, tudi o organizaciji dela v času, ko bodo vrata šole zaprta, boste obveščeni prav tukaj.<br>
           Za vse informacije in ostala vprašanja smo Vam vedno na voljo tudi učitelji preko elektronske pošte, e-asistenta,...<br>
