--- a/tekoce_covid.html
+++ b/tekoce_covid.html
@@ -33,9 +33,11 @@
 									<h2>Snov bo dodana ob koncu tedna</h2>
 								</header>
                 <p>
-	  Snov, ki jo bodo učenci 5. razreda predelali za predmet DRUŽBA, bo dodana ob koncu tega tedna.<br>
-	  Hvala za razumevanje,<br>
-    Amalija Kezele
+	Snov, ki jo bodo učenci 5. razreda predelali za predmet DRUŽBA, bo dodana ob koncu tega tedna.<br>
+	Vsem želim predvsem zdravja in Vas lepo pozdravljam. In ostanite doma, da kar se da hitro zmagamo!
+	Hvala za razumevanje.<br>
+	S spoštovanjem,<br>
+        Amalija Kezele
                 </p>
                
 							</article>
