--- a/Covid-19.html
+++ b/Covid-19.html
@@ -34,9 +34,10 @@
 								</header>
                 <p>
 	  Na šoli redno spremljamo novice Ministrstva za zdravje in Ministrstva za šolstvo, izobraževanje in šport glede širjenja COVID 19.<br>
-	  <strong>V povezavi na https://www.nijz.si/ lahko najdete nekaj informacij glede koronavirusa.</strong><br>
-	  V zadnjih dneh potekajo na šoli aktivnosti, povezane s trenutno situacijo zaradi širjenja virusa.<br>
-          O vsem, tudi o organizaciji dela v času, ko bodo vrata šole zaprta, boste obveščeni prav tukaj.<br>
+	  <strong>V povezavi na https://www.nijz.si/ lahko najdete informacije glede koronavirusa.</strong><br>
+	  V zadnjih dneh potekajo na šoli aktivnosti, povezane s trenutno situacijo.<br>
+          O vsem, tudi o organizaciji dela v času, ko se k pouku vračajo prvi učenci, boste obveščeni prav tukaj.<br>
+	  <strong>Po najnovejših informacijah, se 18. maja k pouku vrnejo učenci 1. in 2. razreda, teden dni kasneje pa učenci 9. razreda.</strong><br>
           Za vse informacije in ostala vprašanja smo Vam vedno na voljo tudi učitelji preko elektronske pošte, e-asistenta,...<br>
 	  Hvala za razumevanje
                 </p>
