--- a/Covid-19.html
+++ b/Covid-19.html
@@ -34,12 +34,11 @@
 								</header>
                 <p>
 	  Na šoli redno spremljamo novice Ministrstva za zdravje in Ministrstva za šolstvo, izobraževanje in šport glede širjenja COVID 19.<br>
-	  <strong>V povezavi na https://www.nijz.si/ lahko najdete informacije glede koronavirusa.</strong><br>
-	  V zadnjih dneh potekajo na šoli aktivnosti, povezane s trenutno situacijo.<br>
-          O vsem, tudi o organizaciji dela v času, ko se k pouku vračajo prvi učenci, boste obveščeni prav tukaj.<br>
-	  <strong>Po najnovejših informacijah, se 18. maja k pouku vrnejo učenci 1. in 2. razreda, teden dni kasneje pa učenci 9. razreda.</strong><br>
+	  <strong>V povezavi na https://www.nijz.si/ lahko najdete vse tekoče informacije glede novega koronavirusa.</strong><br>
+	  V zadnjih dneh potekajo na šoli aktivnosti povezane s trenutno situacijo, organizacijo pouka v šolskem letu 2020/2021.<br>
+          <strong>Na spletni strani, skrajno desno je ustvarjen meni, imenovan SARS-CoV2-informacije. Prav tam bomo objavljali najnovejše inforamacije v zvezi s samim potekom pouka na Osnovni šoli Fara, objavljen je tudi protokol za preprečevanje bolezni na OŠ Fara, ki ga je potrdil učiteljski zbor. </strong><br>
           Za vse informacije in ostala vprašanja smo Vam vedno na voljo tudi učitelji preko elektronske pošte, e-asistenta,...<br>
-	  Hvala za razumevanje
+	  Hvala za razumevanje.
                 </p>
                
 							</article>
